@@ -66,6 +66,7 @@ Template for new versions:
 - `gui/launcher`: fix detection on Shift-Enter for running commands and autoclosing the launcher
 - `logistics`: don't send autotrade items to forbidden depots
 - `autoclothing`: don't produce clothes for dead units
+- `caravan`: fix trade price calculations when the same item was requested for both import and export
 
 ## Misc Improvements
 - `autobutcher`: prefer butchering partially trained animals and save fully domesticated animals to assist in wildlife domestication programs
